Fixed btn on mobile and welcome btn on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -50,7 +50,7 @@ body {
   min-width: 400px;
 }
 
-.main-btn {
+#main-btn {
   background-color: transparent;
   color: var(--main-color);
   border: 4px solid var(--main-color);
@@ -61,7 +61,7 @@ body {
   letter-spacing: 2px;
 }
 
-.main-btn:hover {
+#main-btn:hover {
   background-color: var(--main-color);
   color: var(--complement-color);
   border-color: var(--main-color);
@@ -83,16 +83,17 @@ body {
 }
 
 .top {
-  background: url(../assets/otherbg.jpg) no-repeat center center fixed; 
+  background: url(../assets/otherbg.jpg) no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   height: 500px;
+  max-width: 100%;
 }
 
 .about-top {
-  background: url(../assets/about.jpg) no-repeat center center fixed;
+  background: url(../assets/about.jpg) no-repeat center center;
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -101,7 +102,7 @@ body {
 }
 
 .contact-top {
-  background: url(../assets/contact.jpg) no-repeat center center fixed; 
+  background: url(../assets/contact.jpg) no-repeat center center; 
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -110,16 +111,17 @@ body {
 }
 
 .prospects-top {
-  background: url(../assets/prospects.jpg) no-repeat center center fixed; 
+  background: url(../assets/prospects.jpg) no-repeat center center; 
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   height: 500px;
+  max-width: 100%;
 }
 
 .team-top {
-  background: url(../assets/team.jpg) no-repeat center center fixed; 
+  background: url(../assets/team.jpg) no-repeat center center; 
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -277,8 +279,9 @@ body {
 }
 
 #submit-btn {
-  background-color: var(--prae-blue);
+  background-color: var(--complement-color);
   color: var(--main-color);
+  -webkit-appearance: none;
 }
 
 .contact-form textarea {
